[tool.poetry]
name = "best-nine"
version = "0.1.0"
description = ""
authors = ["leonardofj <leonardofj@gmail.com>"]
readme = "README.md"
packages = [{include = "best_nine"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
